--- a/index.html
+++ b/index.html
@@ -68,7 +68,15 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-slogan">Эффективные решения для вашего бизнеса</h1>
-          <button class="hero-btn" type="button">Заказать услугу</button>
+          <button class="hero-btn" type="button" data-modal-open>
+            Заказать услугу
+          </button>
+
+          <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+              <button class="close-button" data-modal-close>close</button>
+            </div>
+          </div>
         </div>
       </section>
       <!-- Секция особенностей - здесь 4 особенности -->
@@ -448,5 +456,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
