Практически сделан индекс.
Остался оверлей на карточках портфолио  и свг крестик на модалке.

--- a/index.html
+++ b/index.html
@@ -146,20 +146,25 @@
               alt="programer working his desk office"
               height="294"
             />
+            <p class="our-act-img-title">Десктопные приложения</p>
           </li>
+
           <li class="our-activities-item">
             <img
               src="./images/speciality/image-02.jpg"
               alt="web ui designers are developing smartphones application"
               height="294"
             />
+            <p class="our-act-img-title">Мобильные приложения</p>
           </li>
+
           <li class="our-activities-item">
             <img
               src="./images/speciality/image-03.jpg"
               alt="creative artist web design with working colour selection graphic tablet"
               height="294"
             />
+            <p class="our-act-img-title">Дизайнерские решения</p>
           </li>
         </ul>
       </section>
