--- a/portfolio.html
+++ b/portfolio.html
@@ -96,6 +96,13 @@
                     height="294"
                   />
                 </div>
+                <!--<div class="cards-project-overlay">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div> -->
                 <div class="project-description">
                   <h3 class="cards-project-name">Технокряк</h3>
                   <p class="cards-project-type">Веб-сайт</p>
