Сделан синий оверлей
Но он пока не скрытый элемент
+доработать свг кнопки close на модалке.

--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
           </ul>
           <!-- Список карточек -->
           <ul class="cards-list list">
-            <li class="cadrs-list-item">
+            <li class="cards-list-item">
               <a href="">
                 <div class="cards-image">
                   <img
@@ -96,13 +96,13 @@
                     height="294"
                   />
                 </div>
-                <!--<div class="cards-project-overlay">
+                <div class="cards-img-overlay">
                   <p>
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
-                </div> -->
+                </div>
                 <div class="project-description">
                   <h3 class="cards-project-name">Технокряк</h3>
                   <p class="cards-project-type">Веб-сайт</p>
@@ -110,7 +110,7 @@
               </a>
             </li>
 
-            <li class="cadrs-list-item">
+            <li class="cards-list-item">
               <a href="">
                 <div class="cards-image">
                   <img
@@ -128,7 +128,7 @@
               </a>
             </li>
 
-            <li class="cadrs-list-item">
+            <li class="cards-list-item">
               <a href="">
                 <div class="cards-image">
                   <img
@@ -144,7 +144,7 @@
               </a>
             </li>
 
-            <li class="cadrs-list-item">
+            <li class="cards-list-item">
               <a href="">
                 <div class="cards-image">
                   <img
@@ -160,7 +160,7 @@
               </a>
             </li>
 
-            <li class="cadrs-list-item">
+            <li class="cards-list-item">
               <a href="">
                 <div class="cards-image">
                   <img
@@ -176,7 +176,7 @@
               </a>
             </li>
 
-            <li class="cadrs-list-item">
+            <li class="cards-list-item">
               <a href="">
                 <div class="cards-image">
                   <img
@@ -192,7 +192,7 @@
               </a>
             </li>
 
-            <li class="cadrs-list-item">
+            <li class="cards-list-item">
               <a href="">
                 <div class="cards-image">
                   <img
@@ -208,7 +208,7 @@
               </a>
             </li>
 
-            <li class="cadrs-list-item">
+            <li class="cards-list-item">
               <a href="">
                 <div class="cards-image">
                   <img
@@ -224,7 +224,7 @@
               </a>
             </li>
 
-            <li class="cadrs-list-item">
+            <li class="cards-list-item">
               <a href="">
                 <div class="cards-image">
                   <img
