--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
 
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-              <button class="close-button" data-modal-close>close</button>
+              <button class="close-button" data-modal-close>
+                <svg class="close-button-icon" width="18px" height="18px">
+                  <use href="./images/sprite.svg#close-black-18dp"></use>
+                </svg>
+              </button>
             </div>
           </div>
         </div>
