--- a/portfolio.html
+++ b/portfolio.html
@@ -95,9 +95,7 @@
                     alt="Проект технокряк"
                     height="294"
                   />
-                </div>
-                <div class="cards-img-overlay">
-                  <p>
+                  <p class="cards-img-overlay">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -118,6 +116,11 @@
                     alt="Постер Новый Орлеан против Голден Стар"
                     height="294"
                   />
+                  <p class="cards-img-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="project-description">
                   <h3 class="cards-project-name">
@@ -136,6 +139,11 @@
                     alt="Ресторан Сифуд"
                     height="294"
                   />
+                  <p class="cards-img-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="project-description">
                   <h3 class="cards-project-name">Ресторан Seafood</h3>
@@ -152,6 +160,11 @@
                     alt="Проект Прайм"
                     height="294"
                   />
+                  <p class="cards-img-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="project-description">
                   <h3 class="cards-project-name">Проект Prime</h3>
@@ -168,6 +181,11 @@
                     alt="Проект Боксес"
                     height="294"
                   />
+                  <p class="cards-img-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="project-description">
                   <h3 class="cards-project-name">Проект Boxes</h3>
@@ -184,6 +202,11 @@
                     alt="Веб-сайт проекта Inspiration has no Borders"
                     height="294"
                   />
+                  <p class="cards-img-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="project-description">
                   <h3 class="cards-project-name">Inspiration has no Borders</h3>
@@ -200,6 +223,11 @@
                     alt="Издание Лимитед Эдишн"
                     height="294"
                   />
+                  <p class="cards-img-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="project-description">
                   <h3 class="cards-project-name">Издание Limited Edition</h3>
@@ -216,6 +244,11 @@
                     alt="Проект Лаб"
                     height="294"
                   />
+                  <p class="cards-img-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="project-description">
                   <h3 class="cards-project-name">Проект LAB</h3>
@@ -232,6 +265,11 @@
                     alt="Приложение Гроуин бизнес"
                     height="294"
                   />
+                  <p class="cards-img-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="project-description">
                   <h3 class="cards-project-name">Growing Business</h3>
