--- a/index.html
+++ b/index.html
@@ -71,16 +71,6 @@
           <button class="hero-btn" type="button" data-modal-open>
             Заказать услугу
           </button>
-
-          <div class="backdrop is-hidden" data-modal>
-            <div class="modal">
-              <button class="close-button" data-modal-close>
-                <svg class="close-button-icon" width="18px" height="18px">
-                  <use href="./images/sprite.svg#close-black-18dp"></use>
-                </svg>
-              </button>
-            </div>
-          </div>
         </div>
       </section>
       <!-- Секция особенностей - здесь 4 особенности -->
@@ -465,6 +455,17 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="close-button" type="button" data-modal-close>
+          <svg class="close-button-icon" width="11px" height="11px">
+            <use href="./images/sprite.svg#close-black-11dp"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
