--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
           <!-- Список карточек -->
           <ul class="cards-list list">
             <li class="cards-list-item">
-              <a href="">
+              <a href="#" class="cards-list-link link">
                 <div class="cards-image">
                   <img
                     src="./images/portfolio/technokryak.jpg"
@@ -109,7 +109,7 @@
             </li>
 
             <li class="cards-list-item">
-              <a href="">
+              <a href="#" class="cards-list-link link">
                 <div class="cards-image">
                   <img
                     src="./images/portfolio/basketball-poster.jpg"
@@ -132,7 +132,7 @@
             </li>
 
             <li class="cards-list-item">
-              <a href="">
+              <a href="#" class="cards-list-link link">
                 <div class="cards-image">
                   <img
                     src="./images/portfolio/restaurant-seafood.jpg"
@@ -153,7 +153,7 @@
             </li>
 
             <li class="cards-list-item">
-              <a href="">
+              <a href="#" class="cards-list-link link">
                 <div class="cards-image">
                   <img
                     src="./images/portfolio/project-prime.jpg"
@@ -174,7 +174,7 @@
             </li>
 
             <li class="cards-list-item">
-              <a href="">
+              <a href="#" class="cards-list-link link">
                 <div class="cards-image">
                   <img
                     src="./images/portfolio/project-boxes.jpg"
@@ -195,7 +195,7 @@
             </li>
 
             <li class="cards-list-item">
-              <a href="">
+              <a href="#" class="cards-list-link link">
                 <div class="cards-image">
                   <img
                     src="./images/portfolio/inspiration.jpg"
@@ -216,7 +216,7 @@
             </li>
 
             <li class="cards-list-item">
-              <a href="">
+              <a href="#" class="cards-list-link link">
                 <div class="cards-image">
                   <img
                     src="./images/portfolio/limited-edition.jpg"
@@ -237,7 +237,7 @@
             </li>
 
             <li class="cards-list-item">
-              <a href="">
+              <a href="#" class="cards-list-link link">
                 <div class="cards-image">
                   <img
                     src="./images/portfolio/project-lab.jpg"
@@ -258,7 +258,7 @@
             </li>
 
             <li class="cards-list-item">
-              <a href="">
+              <a href="#" class="cards-list-link link">
                 <div class="cards-image">
                   <img
                     src="./images/portfolio/growing-business.jpg"
